Agrego Implementacion punto1, Modif en Teorica punto 3 y emprolijo teórica punto 2

--- a/AMIA/LDA_QDA.ipynb
+++ b/AMIA/LDA_QDA.ipynb
@@ -108,7 +108,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 1,
       "metadata": {
         "id": "teF9O9JJmG7Z"
       },
@@ -120,7 +120,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 2,
       "metadata": {
         "id": "sDBLvbTtlwzs"
       },
@@ -167,7 +167,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 3,
       "metadata": {
         "id": "m0KYC8_uSOu4"
       },
@@ -248,7 +248,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": 4,
       "metadata": {
         "id": "IRamFdiGDuSR"
       },
@@ -321,7 +321,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": 5,
       "metadata": {
         "id": "m05KrhUDINVs"
       },
@@ -333,7 +333,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": 17,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -366,7 +366,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": 7,
       "metadata": {},
       "outputs": [
         {
@@ -375,7 +375,7 @@
               "array(['setosa', 'versicolor', 'virginica'], dtype='<U10')"
             ]
           },
-          "execution_count": 31,
+          "execution_count": 7,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -386,7 +386,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": 8,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -405,7 +405,7 @@
               "       [5. , 3.6, 1.4, 0.2]])"
             ]
           },
-          "execution_count": 32,
+          "execution_count": 8,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -417,7 +417,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": 9,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -436,7 +436,7 @@
               "       ['setosa']], dtype='<U10')"
             ]
           },
-          "execution_count": 33,
+          "execution_count": 9,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -448,7 +448,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": 10,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -483,7 +483,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": 11,
       "metadata": {
         "id": "dGIf2TA5SpoT"
       },
@@ -496,7 +496,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": 12,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -551,7 +551,7 @@
         "\n",
         "2. Explicar, utilizando las respectivas funciones a maximizar, por qué QDA y LDA son \"quadratic\" y \"linear\".\n",
         "\n",
-        "3.La implementación de QDA estima la probabilidad condicional utilizando 0.5*np.log(det(inv_cov)) -0.5 * unbiased_x.T @ inv_cov @ unbiased_x que no es exactamente lo descrito en el apartado teórico ¿Cuáles son las diferencias y por qué son expresiones equivalentes?\n"
+        "3. La implementación de QDA estima la probabilidad condicional utilizando 0.5*np.log(det(inv_cov)) -0.5 * unbiased_x.T @ inv_cov @ unbiased_x que no es exactamente lo descrito en el apartado teórico ¿Cuáles son las diferencias y por qué son expresiones equivalentes?\n"
       ]
     },
     {
@@ -560,7 +560,7 @@
       "source": [
         "## Preguntas teoricas\n",
         "\n",
-        "### 1- \n",
+        "### 1- Derivación de LDA\n",
         "\n",
         "Dado que para LDA $\\Sigma_j == \\Sigma $:\n",
         "$$\n",
@@ -596,7 +596,7 @@
         "\n",
         "\n",
         "\n",
-        "### 2-\n",
+        "### 2- Quadratic vs Linear\n",
         "\n",
         "Como se demostro anteriormente, la funcion a maximizar de LDA tiene un termino lineal. \n",
         "\n",
@@ -605,9 +605,7 @@
         "\\log{f_j(x)} =  \\mu_j^T \\Sigma^{-1} (x- \\frac{1}{2} \\mu_j) + C'\n",
         "$$\n",
         "\n",
-        "Sin embargo \n",
-        "\n",
-        "QDA tiene un termino cuadratico, que no se puede simplificar como en LDA porque la matriz de covarianza depende de la clase\n",
+        "Sin embargo, QDA tiene un termino cuadratico, que no se puede simplificar como en LDA porque la matriz de covarianza depende de la clase\n",
         "\n",
         "$$\n",
         "\\log{f_j(x)} = -\\frac{1}{2}\\log |\\Sigma_j| - \\frac{1}{2} (x-\\mu_j)^T \\Sigma_j^{-1} (x- \\mu_j) + C\n",
@@ -616,25 +614,32 @@
         "\n",
         "### 3-  Propiedades de los logaritmos\n",
         "\n",
-        "teoria\n",
+        "En la parte teórica, se presenta la siguiente fórmula para QDA:\n",
         "$$\n",
         "\\log{f_j(x)} = -\\frac{1}{2}\\log |\\Sigma_j| - \\frac{1}{2} (x-\\mu_j)^T \\Sigma_j^{-1} (x- \\mu_j) + C\n",
         "$$\n",
-        "Codigo\n",
-        "`0.5*np.log(det(inv_cov)) -0.5 * unbiased_x.T @ inv_cov @ unbiased_x`\n",
+        "Sin embargo, el codigo provisto usa la inversa de matriz de covarianza: `0.5*np.log(det(inv_cov)) -0.5 * unbiased_x.T @ inv_cov @ unbiased_x`\n",
         "\n",
+        "Estas dos formas de calcular el resultado son equivalentes ya que, $ |\\Sigma_j| = \\frac{1}{|\\Sigma_j^{-1}|} = (|\\Sigma_j^{-1}|)^{-1} $ y por lo tanto el primer término de la fórmula teórica equivale a $  -\\frac{1}{2}\\log |\\Sigma_j| = +\\frac{1}{2}\\log |\\Sigma_j^{-1}| $\n",
         "\n",
-        "Respuesta:el codigo usa la inversa de matriz de covarianza, mientras que el apartado teorico no. \n",
+        "En la implementación práctica se prioriza utilizar la variable $ \\Sigma_j^{-1} $ ya que de esta forma se evita tener que guardar el valor tanto de $ \\Sigma_j $ como de $ \\Sigma_j^{-1} $.\n",
         "\n",
-        "Estos dos valores son equivalentes porque al -log(det(v))  = log( det( inv(v) ) ), esto es por propiedades del logartimo para los exponentes, para la funcion log baja el - 1. \n",
-        "//redactar mejor"
+        "# SUBIR!!!"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## implementacion punto 1"
+        "# Implementacion punto 1\n",
+        "#### 1) Entrenar un modelo QDA utilizando ahora una *a priori* uniforme ¿Se observan diferencias? ¿Por qué?\n",
+        "\n",
+        "No se encontraron diferencias al entrenar un modelo de QDA con una distribución uniforme en comparación con el modelo original provisto.\n",
+        "\n",
+        "Esto se debe a que, en el caso de no proveer explicitamente una distribución a_priori cuando se llama al método QDA.fit(), la clase QDA computa automáticamente la distribución a_priori como la proporción de cada clase dentro del dataset. Para el caso del dataset \"iris\", el mismo se encuentra perfectamente balanceado, habiendo 50 muestras para cada clase. Por lo tanto, dado que el código original no establece una distribución apriori distinta, el cálculo automático de QDA.fit() termina computando una distribución uniforme dado que la proporción de cada clase dentro del dataset es la misma.\n",
+        "\n",
+        "\n",
+        "# SUBIR !!!"
       ]
     },
     {
@@ -662,7 +667,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 37,
+      "execution_count": 13,
       "metadata": {
         "id": "1ChynN-GXSL5"
       },
@@ -705,7 +710,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 38,
+      "execution_count": 14,
       "metadata": {},
       "outputs": [
         {
@@ -731,7 +736,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": 15,
       "metadata": {},
       "outputs": [
         {
@@ -782,11 +787,8 @@
       "name": "AMIA - TP final LDA/QDA.ipynb",
       "provenance": []
     },
-    "interpreter": {
-      "hash": "c28c3cf458679f9b83f61209d65f8a8f2d99f99372cb71f1948565dfdc4b7b2a"
-    },
     "kernelspec": {
-      "display_name": "Python 3.8.13 ('FIUBA001')",
+      "display_name": "Python 3.10.1 64-bit",
       "language": "python",
       "name": "python3"
     },
@@ -800,7 +802,12 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.8.13"
+      "version": "3.10.1"
+    },
+    "vscode": {
+      "interpreter": {
+        "hash": "54dee8e2628c7a348348274027baca590104374d7a70a03370ff5ec22cf94c02"
+      }
     }
   },
   "nbformat": 4,
